<resources>
    <string name="app_name">BY COLORS</string>
    <string name="positive_button">확인</string>
    <string name="negative_button">취소</string>
    <string name="neutral_button">저장 안 함</string>
    <string name="date_format">yyyy-MM-dd a hh:mm</string>
    <string name="intro_title1">컬러풀한 그룹</string>
    <string name="intro_title2">심플한 터치</string>
    <string name="intro_title3">쉬운 삭제</string>
    <string name="intro_desc1">다양한 색으로 노트를 분류하세요.  컬러풀한 색은 즐거운 노트 습관을 만듭니다.</string>
    <string name="intro_desc2">가운데 버튼을 눌러 주세요.  거의 모든 기능을 하나의 버튼에 담았습니다.</string>
    <string name="intro_desc3">오른쪽으로 스와이프 해주세요.  노트가 휴지통으로 이동합니다.</string>
    <string name="intro_start">시작하기</string>
    <string name="subtitle">모든 색의 노트가 선택되었습니다.</string>
    <string name="main_note_count">NOTES</string>
    <string name="delete_this_message">휴지통으로 보낼까요?</string>
    <string name="onswiped_delete">휴지통으로 보냈습니다.</string>
    <string name="undo_text_color" translatable="false">#FFFFFF</string>
    <string name="update_fail">수정에 실패했습니다.</string>
    <string name="delete_All_message">모든 노트와 그룹이 사라집니다.  초기화 하시겠습니까?</string>
    <string name="delete_all_memo">초기화 되었습니다.</string>
    <string name="default_currentGroupName" translatable="false">ETC</string>
    <string name="close_app_message">종료하시겠습니까?</string>
    <string name="add_group_message">그룹이 추가되었습니다.</string>
    <string name="turn_important">삭제되지 않는 노트가 되었습니다.</string>
    <string name="turn_unimportant">잠금 상태에서 해제되었습니다.</string>
    <string name="unable_to_delete_when_important">잠금상태에선 삭제할 수 없습니다.</string>
    <string name="deleted_message">삭제되었습니다.</string>
    <string name="memo_is_empty">노트가 비었습니다.</string>
    <string name="default_memo_title">제목없음</string>
    <string name="ask_modify">변경사항을 저장할까요?</string>
    <string name="new_memo">새 노트</string>
    <string name="group_config_title">그룹 관리</string>
    <string name="app_dsec">모든 노트를 보고 있습니다.</string>
    <string name="hint_word">내용</string>
    <string name="insert_memo">내용을 입력해주세요.</string>
    <string name="hint_default_color" translatable="false">BLACK</string>
    <string name="hint_title">제목</string>
    <string name="insert_title">제목을 입력해주세요</string>
    <string name="menu_search">검색</string>
    <string name="menu_share_this_app">앱 공유하기</string>
    <string name="app_reset">초기화</string>
    <string name="list_null">노트가 없습니다.</string>
    <string name="add_new">새 노트</string>
    <string name="latest_time">시간</string>
    <string name="share_this_memo">공유하기</string>
    <string name="save_this">저장</string>
    <string name="undo">취소</string>
    <string name="share_title">노트 공유하기</string>
    <string name="color_default" translatable="false">#333333</string>
    <string name="add_activity_title">추가</string>
    <string name="edit_activity_title">편집</string>
    <string name="memo_deleted">삭제되었습니다.</string>
    <string name="menu_delete">삭제</string>
    <string name="filter_all">전체</string>
    <string name="filter_important">필터 : 중요</string>
    <string name="filter_state">상태정보</string>
    <string name="menu_important">즐겨찾기</string>
    <string name="delete_for_lock_message">잠긴 노트는 삭제할 수 없습니다.</string>
    <string name="hint_group_name">그룹 이름</string>
    <string name="hint_group_desc">그룹 설명</string>
    <string name="choose_color">그룹 색상 선택</string>
    <string name="group_add_title">그룹 추가</string>
    <string name="group_edit_title">그룹 편집</string>
    <string name="unable_to_delete_default_group">기본 그룹은 삭제할 수 없습니다.</string>
    <string name="delete_group_confirm_message">그룹을 삭제할까요?</string>
    <string name="group_deleted">그룹이 삭제되었습니다.</string>
    <string name="cancel_msg">취소했습니다.</string>
    <string name="group_has_memos">메모를 먼저 삭제해야 합니다.</string>
    <string name="no_more_colors">그룹 색을 모두 사용하였습니다.</string>
    <string name="trash_title">휴지통</string>
    <string name="empty_trash">완전히 삭제할까요?</string>
    <string name="enempty_trash">노트를 완전히 삭제하였습니다.</string>
    <string name="ask_recover_trash">노트를 복원할까요?</string>
    <string name="recover_trash_message">메모를 기타 그룹으로 복원하였습니다.</string>
    <string name="ask_trash_remove_forever">휴지통을 비울까요?</string>
    <string name="remove_all_trash">휴지통을 비웠습니다.</string>
    <string name="group_title">그룹 이름</string>
    <string name="group_desc">설명 (필수 아님)</string>
    <string name="delete_group">그룹 삭제</string>
    <string name="trash_desc">15일이 지난 노트는 자동으로 휴지통에서 삭제됩니다.</string>
    <string name="trash_list_is_empty">휴지통이 비었습니다.</string>
    <string name="select_group">그룹 선택</string>
    <string name="edit_group">편집</string>
    <string name="all_note">모든 노트</string>
    <string name="add_new_note">새 노트 쓰기</string>
    <string name="important_title">잠금</string>
    <string name="add_new_group">추가</string>
    <string name="empty">비우기</string>
    <string name="intro">인트로</string>
</resources>
