<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_memo"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/save_this"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/important_memu"
        android:icon="@drawable/ic_lock_open"
        android:title="잠금"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share_memo"
        android:icon="@drawable/ic_share"
        android:title="@string/share_this_memo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_this"
        android:title="@string/menu_delete"
        app:showAsAction="never"/>
</menu>