<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/add_memo_menu"
        android:icon="@drawable/ic_add_white"
        android:title="@string/add_new"
        android:iconTint="#FFFFFF"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/memo_color_filter"
        android:title="카테고리"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share_app"
        android:title="@string/menu_share_this_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_all_memos"
        android:title="@string/menu_delete_all_memos"
        app:showAsAction="never" />
</menu>