<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/add_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity">


    <EditText
        android:id="@+id/title_editText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divide_line_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_editText"/>

    <TextView
        android:id="@+id/latestDate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/latest_time"
        android:textColor="#cccccc"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide_line_view" />

    <EditText
        android:id="@+id/content_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/hint_word"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/currentColor_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latestDate_textView" />

    <TextView
        android:id="@+id/currentColor_textView"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#000000"
        android:clickable="true"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/color_toggle_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_keyboard_arrow_up"
        app:layout_constraintBottom_toBottomOf="@+id/currentColor_textView"
        app:layout_constraintEnd_toEndOf="@+id/currentColor_textView"
        app:layout_constraintTop_toTopOf="@+id/currentColor_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_list_recyclerView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@null"
        android:elevation="10dp"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/currentColor_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_group_image"
        tools:listitem="@layout/group_select_list_item">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/add_group_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/group_list_recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_list_recyclerView"
        app:srcCompat="@drawable/ic_add_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>